New graphs and views.
Build SQL query incrementaly.

Refactoring.

git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@100 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -53,6 +53,7 @@ td {
 #date_form {
 	float: right;
 	clear: right;
+	margin-bottom: 10px;
 }
 
 #container {
@@ -131,5 +132,17 @@ td {
 }
 
 .align_right {
+	text-align: right;
+}
+
+.left {
+	text-align: left;
+	padding-left: 20px;
+	padding-bottom: 5px;
+}
+select {
+	text-transform: capitalize;
+}
+input {
 	text-align: right;
 }
