--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -112,6 +112,9 @@ td {
 	margin: 0px auto;
 	padding: 0px 0px 0px 0px;
 }
+#legend_tbl {
+	width: 88%;	
+}
 
 #legend_tbl td {
 	padding-left: 10px;
@@ -147,8 +150,8 @@ input {
 	text-align: right;
 }
 .text_overflow {
-	overflow: hidden;
-	text-overflow: ellipsis;
+	overflow: hidden;	
+	height: 1.2em;
 }
 .error_panel {
 	
