--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -142,6 +142,7 @@ td {
 	text-align: left;
 	padding-left: 20px;
 	padding-bottom: 5px;
+	padding-right: 20px;
 }
 select {
 	text-transform: capitalize;
