change made for dynamic updation feature addition
git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@218 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -41,8 +41,8 @@ td {
 
 #header {
 	width: 780px;
-	height: 130px;
-	background-image: url(../images/header-background.png);
+	height: 150px;
+	background-image: url('../images/header-background.png');
 }
 
 #logo {
