Bug with old IE fixed.
git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@257 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -41,8 +41,9 @@ td {
 
 #header {
 	width: 780px;
-	height: 150px;
+	height: 180px;
 	background-image: url('../images/header-background.png');
+	background-repeat: repeat-x;
 }
 
 #logo {
