--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -15,7 +15,7 @@ label {
 }
 
 p {
-	margin: 10px;
+	margin: 8px;
 }
 
 table {
@@ -61,22 +61,41 @@ td {
 #more_options {
 	float: left;
 	clear: left;
-	margin-top: 65px;	
+	margin-top: 5px;	
 	margin-left: 20px;	
 }
 
 #options {
 	float: left;
 	clear: left;
-	margin-top: 40px;	
+	margin-top: 5px;	
 	margin-left: 20px;	
 }
 
-#result {
+#successResult {
 	float: left;
-	clear: left;
-	margin-top: 20px;
-	margin-left: 10px;
+	clear: center;	
+	margin-left: 20px;	
+	background-color: #99CC99;
+	background-repeat: repeat-x;
+}
+
+#success{
+	height: 30px;
+	width: 200px;	
+}
+
+#unsuccessResult {
+	float: left;
+	clear: center;
+	margin-left: 20px;	
+	background-color: #CC6666; 
+	background-repeat: repeat-x;
+}
+
+#unsuccess{
+	height: 30px;
+	width: 620px;	
 }
 
 #date_form {
@@ -163,22 +182,31 @@ td {
  	float: left; 
 }
 
-#save_conf {
-	margin-top: 100px;
+#scrolltable {
+    margin-top: 15px;
+	overflow:auto;
+    padding-right: 0.05px; padding-top: 0px; padding-left: 120px; padding-bottom: 0.005px;
+    scrollbar-arrow-color : #999999; scrollbar-face-color : #666666;
+    scrollbar-track-color :#3333333 ; position: absolute;
+    left: 100; top: 10; width: 50%; height:160px
+}
+
+#uoptions {
 	float: left;
- 	margin-left: 0px; 
+	clear: left;
+	margin-top: 190px;	
+	margin-left: 140px;	
 }
 
 #configuration{
-	height: 200px;
-	width: 780px;
-	
+	height: 265px;
+	width: 775px;	
 	}
 
 #conf_form {
 	float: left;
 	clear: left;
-	margin-top: 50px;
+	margin-top: 10px;
 }
 
 .change {
@@ -227,6 +255,4 @@ input {
 	padding: 3px;
 	margin-bottom: 1em;
 	text-align: left;
-	
 }
-
