--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -61,41 +61,38 @@ td {
 #more_options {
 	float: left;
 	clear: left;
-	margin-top: 5px;	
-	margin-left: 20px;	
+	margin-top: 0.2em;	
+	margin-left: 1.5em;
 }
 
 #options {
 	float: left;
 	clear: left;
-	margin-top: 5px;	
-	margin-left: 20px;	
+	margin-top: 0.5em;	
+	margin-left: 1.5em;	
 }
 
 #successResult {
 	float: left;
-	clear: center;	
-	margin-left: 20px;	
+	clear: center;
+	margin-left: 2em;				
 	background-color: #99CC99;
 	background-repeat: repeat-x;
-}
-
-#success{
-	height: 30px;
-	width: 200px;	
+	border-color: gray;
+    border-width: 0.05em;
+    border-style: groove;
 }
 
 #unsuccessResult {
 	float: left;
 	clear: center;
-	margin-left: 20px;	
+	margin-left: 2em;	
 	background-color: #CC6666; 
 	background-repeat: repeat-x;
-}
-
-#unsuccess{
-	height: 30px;
-	width: 620px;	
+	border-color: gray;
+    border-width: 0.05em;
+    border-style: groove;
+	
 }
 
 #date_form {
@@ -168,6 +165,17 @@ td {
 	margin: 0px auto;
 	padding: 0px 0px 0px 0px;
 }
+
+.scroll_table {
+	margin: 0px auto;
+	padding: 0px 0px 0px 0px;
+}
+
+.scroll_table td {
+	text-align: center;
+}
+
+
 #legend_tbl {
 	width: 88%;	
 }
@@ -177,36 +185,31 @@ td {
 	padding-right: 10px;
 }
 
-#conf_table {
-	margin-top: 50px;
- 	float: left; 
-}
-
 #scrolltable {
-    margin-top: 15px;
+    margin-top: 1.5em;
 	overflow:auto;
-    padding-right: 0.05px; padding-top: 0px; padding-left: 120px; padding-bottom: 0.005px;
+    padding-right: 0.005em; padding-left: 8em; padding-bottom: 0.05em;
     scrollbar-arrow-color : #999999; scrollbar-face-color : #666666;
     scrollbar-track-color :#3333333 ; position: absolute;
-    left: 100; top: 10; width: 50%; height:160px
+    left: 100; top: 10; width: 50%; height:10.66em
 }
 
 #uoptions {
 	float: left;
 	clear: left;
-	margin-top: 190px;	
-	margin-left: 140px;	
+	margin-top: 13em;	
+	margin-left: 9em;	
 }
 
 #configuration{
-	height: 265px;
-	width: 775px;	
+	height: 18em;
+	width: 48.5em;	
 	}
 
 #conf_form {
 	float: left;
 	clear: left;
-	margin-top: 10px;
+	margin-top: 1em;
 }
 
 .change {
